samples/_failures_safe/1761127859_78a063_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33dab4fc.c: In function ‘main’:
./samples/SAFE/__tmp_33dab4fc.c:145:23: error: expected ‘)’ at end of input
  145 |     print_matrix(&mat2
      |                 ~     ^
      |                       )
./samples/SAFE/__tmp_33dab4fc.c:145:5: error: expected declaration or statement at end of input
  145 |     print_matrix(&mat2
      |     ^~~~~~~~~~~~
